--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                      </div>
                      <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
                         <ul class="costomer">
-                           <li>Cutomers  <a href="#"><span>Call Us : </span>1234567890</a></li>
+                           
                         </ul>
                      </div>
                   </div>
@@ -71,9 +71,9 @@
                   <div class="row d_flex">
                      <div class="col-md-6">
                         <div class="text-bg">
-                           <span>Theme 7</span>
-                           <h1>by Sephirroth </h1>
-                           <p>Ask for your xatspace by messaging id 70007000</p>
+                           <span>MEL</span>
+                           <h1>medeLicia4 (1523708363) </h1>
+                           <p>Oque faz uma mulher bonita ea força com que ela luta pelo oque acredita!</p>
                       
                         </div>
                      </div>
@@ -96,7 +96,7 @@
             <div class="container">
                <div class="row">
                   <div class="col-md-12">
-                     <p>© 2021 All Rights Reserved. <a href="https://xat.com/designhtml/">Sephirroth</a></p>
+                     <p>© 2022 All Rights Reserved. <a href="https://xat.com/designhtml/">Sephiroth</a></p>
                   </div>
                </div>
             </div>
